MicroTriggerFramework/main/default/objects/MicroTrigger_Async_Event__e/MicroTrigger_Async_Event__e.object-meta.xml
<CustomObject>
    <description>A platform event emitted when the MicroTriggerAction Custom Metadata type has Is_Async__c true and 1+ records pass the criteria check</description>
    <label>MicroTrigger Async Event</label>
    <pluralLabel>MicroTrigger Async Events</pluralLabel>
</CustomObject>