MicroTriggerFramework/main/default/objects/MicroTrigger_Async_Event__e/fields/Action_Context__c.field-meta.xml
<CustomField>
    <fullName>Action_Context__c</fullName>
    <description>A serialized map of action class names to the respective ids that should be run for that action</description>
    <label>Action Context</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>