MicroTriggerFramework/main/default/objects/MicroTrigger_Async_Event__e/fields/Trigger_New__c.field-meta.xml
<CustomField>
    <fullName>Trigger_New__c</fullName>
    <description>Represents the new list for the trigger context</description>
    <label>Trigger New</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>