MicroTriggerFramework/main/default/objects/MicroTrigger_Async_Event__e/fields/Trigger_NewMap__c.field-meta.xml
<CustomField>
    <fullName>Trigger_NewMap__c</fullName>
    <description>Represents the new map for the trigger context</description>
    <label>Trigger NewMap</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>