MicroTriggerFramework/main/default/objects/MicroTrigger_Async_Event__e/fields/Trigger_Old__c.field-meta.xml
<CustomField>
    <fullName>Trigger_Old__c</fullName>
    <description>Represents the old list for the trigger context</description>
    <label>Trigger Old</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>