MicroTriggerFramework/main/default/objects/MicroTrigger_Async_Event__e/fields/Trigger_OldMap__c.field-meta.xml
<CustomField>
    <fullName>Trigger_OldMap__c</fullName>
    <description>Represents the old map for the trigger context</description>
    <label>Trigger OldMap</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>